[package]
name = "codecrafters-redis"
version = "0.1.0"
authors = ["Codecrafters <hello@codecrafters.io>"]
edition = "2021"

[dependencies]
color-eyre = "0.6"                              # error handling with colored output
eyre = "0.6"                                    # error handling
bytes = "1.3.0"                                     # helps manage buffers
chrono = "0.4.38"
clap = { version = "4.5.20", features = ["derive"] }
dashmap = "6.1.0"
futures-util = { version = "0.3.31", features = ["sink"] }
hex = "0.4.3"
rand = "0.9.2"
sha2 = "0.11.0"
thiserror = "1.0.32"                                # error handling
tokio = { version = "1.23.0", features = ["full"] } # async networking
tokio-util = { version = "0.7.12", features = ["codec"] }
